# Crypto-Options-Algo

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  go.work  health-check.sh  package.json  pytest.ini  requirements.txt  test_deribit_ws.py
.codex/: setup_script.sh
Crypto-Options-Algo/: README.md  docker-compose.dev.yml  requirements.txt
backend/: Dockerfile  requirements.txt  trades.db
common/: __init__.py  kafka.py
dashboard/: .env  package-lock.json  package.json
docs/: PROJECT_TASKS.md  architecture.md  contracts.md
execution-agent/: Dockerfile  README.md  __main__.py  metrics.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
github_issues/: close_mvp.md  issue_1.md  issue_10.md  issue_11.md  issue_2.md  issue_3.md  issue_4.md  issue_5.md  issue_6.md  issue_7.md  issue_8.md  issue_9.md
infra/: create_ns_and_secrets.sh  helmfile.yaml
integration-tests/: conftest.py  sample_ticks.json  test_risk_sizing.py  test_tick_flow.py  tick.avsc
risk-agent/: Dockerfile  README.md  __main__.py  requirements.txt
scout-agent/: Dockerfile  README.md  __main__.py  filter.py  option_scout.py  requirements.txt
services/: calculator.py
services/ingestor/: Dockerfile  README.md  metrics.py  pyproject.toml
services/ingestor/avro/: option_snap.avsc  size.ack.avsc  size.proposal.avsc  size.reject.avsc  ticks.scouted.v1.avsc
services/ingestor/ingest/: deribit_ws.py  logging_conf.py  producer.py
services/ingestor/tests/: test_throttle.py  test_ws_ping.py
(+73 files in other folders)
